--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+MDFactory.xcodeproj/xcuserdata/denissnezhko.xcuserdatad/xcschemes/xcschememanagement.plist
